--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
 #################
+## SparkFun Useful stuff
+#################
+
+## AVR Development
+*.eep
+*.elf
+*.lst
+*.lss
+*.sym
+*.d
+*.o
+*.srec
+*.map
+
+## Notepad++ backup files
+*.bak
+
+## BOM files
+*bom*
+
+#################
 ## Eclipse
 #################
 
@@ -33,10 +54,9 @@ local.properties
 ## Eagle
 #############
 
-# Ignore the board and schematic and Library backup files
+# Ignore the board and schematic backup files
 *.b#?
 *.s#?
-*.l#?
 
 
 #################
